--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Oh, look a shiny octo journey :D",
   "scripts": {
     "start": "parcel",
-    "dev": "parcel serve",
+    "dev": "parcel serve src/pages/*",
     "build": "parcel build"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Nwko/shiny-octo-journey#readme",
   "devDependencies": {
+    "@parcel/transformer-sass": "2.4.1",
     "parcel": "^2.4.0",
     "sass": "^1.49.10"
   }
