--- a/.gitignore
+++ b/.gitignore
@@ -205,6 +205,7 @@ out
 dist/*
 www/*
 web/*
+public/*
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,node,sass,yarn
 
