+version, +styles, +pages, -todo, -dir, +changes
Updated to version 1.0.2, added styles removed styles, changes in pages, finished a todo, got rid of the public directory and made a changes here and there

--- a/.gitignore
+++ b/.gitignore
@@ -201,11 +201,11 @@ out
 # and uncomment the following lines
 # .pnp.*
 
-# build ###
+### build ###
 dist/*
 www/*
 web/*
-public/*
+public/
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,node,sass,yarn
 
